# usethat

./: .gitignore  README.md  pyproject.toml  setup.cfg
skeleton/: .gitignore  pyproject.toml
skeleton/src/skeleton/: console.py
src/usethat/: cli.py  scaffold.py
